Propagate new timeouts in analyses, better exception handling